about me update

--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,42 @@
 # Site
 repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
-# favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
+favicon: images/favicon.ico
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
-phone: Your phone number (optional)
-website: Your website (eg. https://google.com)(optional)
+name: Sanjay Hona
+title: DevOps Engineer
+email: sanjay.hona@gmail.com
+# phone: Your phone number (optional)
+website: www.sanjayhona.com.np
 
 # Social links
-twitter_username: jekyllrb
-github_username:  jekyll
-dribbble_username: jekyll
-facebook_username: jekyll
-flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-googleplus_username: +jekyll
+twitter_username: sanjayahona
+github_username:  sssanjaya
+# dribbble_username: jekyll
+# facebook_username: jekyll
+# flickr_username: jekyll
+instagram_username: sssanjaya
+linkedin_username: sanjayhona
+unsplash_username: sssanjaya
+medium_username: sssanjaya
+dev_username: sssanjaya
+angellist_username: sssanjaya
+# xing_username: jekyll
+# pinterest_username: jekyll
+# youtube_username: jekyll
+# googleplus_username: +jekyll
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: images/mypic.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+  Namaste, my name is Sanjay Hona and I'm a devops engineer with experience of software development. I have worked at a number of companies gaining teamwork and team lead skill along with devops skill following best practices.
 
-  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
-    - Lists
-    - Tables
-    - Links
-    - Images
+  # You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
+  #   - Lists
+  #   - Tables
+  #   - Links
+  #   - Images
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
