--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ name: Sanjay Hona
 title: DevOps Engineer
 email: sanjay.hona@gmail.com
 # phone: Your phone number (optional)
-website: www.sanjayhona.com.np
+# website: www.sanjayhona.com.np
 
 # Social links
 twitter_username: sanjayahona
@@ -15,7 +15,7 @@ github_username:  sssanjaya
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: sssanjaya
+instagram_username: sssanjayah
 linkedin_username: sanjayhona
 unsplash_username: sssanjaya
 medium_username: sssanjaya
