configs: dark mode user preference

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
 favicon: images/favicon.ico
-
+darkmode: trye (options: false)
 # Personal info
 name: Sanjay Hona
 title: DevOps Engineer
