configs: removed travis ci & dark mode user preference

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
 favicon: images/favicon.ico
 
-darkmode: false
+darkmode: true
 
 # Personal info
 name: Sanjay Hona
