--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: sanjay.hona@gmail.com
 # website: www.sanjayhona.com.np
 
 # Social links
-twitter_username: sanjayahona
+twitter_username: sssanjayah
 github_username:  sssanjaya
 # dribbble_username: jekyll
 # facebook_username: jekyll
