--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
+repository: My Personal Portfolio with github pages and jekyll
 favicon: images/favicon.ico
-darkmode: true
+darkmode: false
 # Personal info
 name: Sanjay Hona
 title: DevOps Engineer
@@ -15,12 +15,9 @@ github_username:  sssanjaya
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: sssanjayah
 linkedin_username: sanjayhona
 unsplash_username: sssanjaya
 medium_username: sssanjaya
-dev_username: sssanjaya
-angellist_username: sssanjaya
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
@@ -30,26 +27,31 @@ angellist_username: sssanjaya
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/mypic.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Namaste, my name is Sanjay Hona and I'm a devops engineer with experience of software development. I have worked at a number of companies gaining teamwork and team lead skill along with devops skill following best practices.
+  A developer turned DevOps Engineer with a passion for automating, with hands-on experience supporting, and optimizing deployments on the cloud, leveraging configuration management, CI/CD, and DevOps processes.
+  
+
+
+  I like: <mark>Linux</mark> <mark>Nu-Metal</mark> <mark>Pencil Sketch</mark> <mark>Trekking</mark> <mark>Swimming</mark> <mark>Mobile Photography</mark>
+#Education Section
+education_title: Education #(Use this to override about education section title)
+education_content: |
+  Bachelors of science in Information Technology 
 
 # Projects Section
-# projects_title: Projects #(Use this to override about projects section title)
+projects_title: Projects #(Use this to override about projects section title)
 
-# Experience Section
-# experience_title: Experience #(Use this to override about experience section title)
-
-# Education Section
-# education_title: Education #(Use this to override about education section title)
+#Experience Section
+experience_title: Experience #(Use this to override about experience section title)
 
 # More Section
 # more_title: A Little More About Me #(Use this to override about more section title)
-more_content: | # this will include new lines to allow paragraphs
-  This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
+# more_content: | # this will include new lines to allow paragraphs
+  # This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
 
-  Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+#   Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
 
 # Footer
-footer_show_references: true
+footer_show_references: false
 
 # Build settings
 # theme: modern-resume-theme (Use this is you are hosting your resume yourself)
