--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,9 @@
 # Education Template
-- layout: left
-  name: Institution name
-  dates: Date Range (eg. 2016 - 2019)
-  qualification: Qualifications (eg. BA Performing Arts)
+- layout: top-middle
+  name: Sikkim Manipal University of Health, Medical and Technological Sciences
+  dates: 2012 - 2015
+  qualification: Bachelor of Science (B.Sc.) in Information Technology
   quote: >
-    Short institution or course description (optional)
+    Cryptography and Network Security, Java programming
   description: | # this will include new lines to allow paragraphs
-    Description of qualification
+    
