--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,10 +1,70 @@
 # Experience template
 - layout: left
-  company: Company name
-  link: Link to company (optional)
-  job_title: Job title
-  dates: Date Range (eg. November 2016 - present)
+  company: Innovate Tech
+  link: https://www.mysecondteacher.com
+  job_title: DevOps Engineer
+  dates: December 2019 - present
   quote: >
-   Short description of the company (optional)
+   things I did and learned here
   description: | # this will include new lines to allow paragraphs
-    Description of role
+    <mark>AWS</mark>
+    <mark>CloudFormation</mark>
+    <mark>CodeBuild</mark>
+    <mark>Lambda</mark>
+    <mark>Nodejs</mark>
+    <mark>Microservice</mark>
+    <mark>Postgres</mark>
+    <mark>Mongodb</mark>
+    <mark>Redis</mark>
+    <mark>Terraform</mark>
+    <mark>Dotnet</mark>
+    <mark>Docker</mark>
+    <mark>Kubernetes</mark>
+    <mark>Graphana</mark>
+    <mark>ELK</mark>
+    <mark>Gitlab CI</mark>
+    <mark>Github Actions</mark>
+    <mark>Sentry</mark>
+
+- layout: left
+  company: Sastra Creations
+  job_title: Jr. DevOps Engineer
+  dates: May 2018 - November 2019
+  quote: >
+   things I did and learned here
+  description: | # this will include new lines to allow paragraphs
+    <mark>Spring Boot</mark>
+    <mark>Angular</mark>
+    <mark>Nodejs</mark>
+    <mark>GPRS CONCOX GT06</mark>
+    <mark>Docker</mark>
+    <mark>Docker Swarm</mark>
+    <mark>Jenkins</mark>
+    <mark>Linode Cloud</mark>
+    <mark>Hetzner Cloud</mark>
+    <mark>Frontail</mark>
+    <mark>Mongodb</mark>
+    <mark>Wordpress</mark>
+    <mark>Ansible</mark>
+    <mark>Bash</mark>
+    <mark>Maven</mark>
+    <mark>Gradle</mark>
+
+- layout: left
+  company: Three Monks
+  job_title: Java Developer
+  dates: November 2016 -  April 2018
+  quote: >
+   things I did and learned here
+  description: | # this will include new lines to allow paragraphs
+    <mark>Spring Core</mark>
+    <mark>Spring MVC</mark>
+    <mark>Spring JDBC</mark>
+    <mark>CentOS Server</mark>
+    <mark>Apache Tomcat</mark>
+    <mark>JSP</mark>
+    <mark>JETTY</mark>
+    <mark>Gradle</mark>
+    <mark>Maven</mark>
+    <mark>sprint mvc</mark>
+
