--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -20,6 +20,7 @@
     <mark>Dotnet</mark>
     <mark>Docker</mark>
     <mark>Kubernetes</mark>
+    <mark>helm</mark>
     <mark>Graphana</mark>
     <mark>ELK</mark>
     <mark>Gitlab CI</mark>
