--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ darkmode: false
 # Personal info
 name: Sanjay Hona
 title: DevOps Engineer
-email: sanjay.hona@gmail.com
+email: contact@sanjayhona.com.np
 # phone: Your phone number (optional)
 # website: www.sanjayhona.com.np
 
